Some more features, upgrade to pg9.6.1

--- a/examples/manifest.yml
+++ b/examples/manifest.yml
@@ -23,6 +23,8 @@ properties:
   consul:
     server: false
     join_hosts: *cips
+  pg:
+    default_lang: "en_US.utf8"
 
 resource_pools:
 - name: default
