--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,5 +1,3 @@
----
-golang/go1.7.4.linux-amd64.tar.gz:
-  size: 84021919
-  object_id: 783849db-2186-488f-459f-28d2f22d7b64
-  sha: 2e5baf03d1590e048c84d1d5b4b6f2540efaaea1
+golang1.8/golang1.8.3.tar.gz:
+  size: 90029041
+  sha: 838c415896ef5ecd395dfabde5e7e6f8ac943c8e
