--- a/manifest/deployment.stolon.yml
+++ b/manifest/deployment.stolon.yml
@@ -71,6 +71,18 @@ instance_groups:
   stemcell: default
   azs: [ z1, z2, z3 ]
 
+- name: smoke-tests
+  jobs:
+  - name: smoke-tests
+    release: stolon
+  networks:
+  - name: default
+  instances: 1
+  lifecycle: errand
+  vm_type: default
+  stemcell: default
+  azs: [ z1, z2, z3 ]
+
 properties:
   pg:
     default_lang: "en_US.utf8"
